2004-07-26  Sven Neumann  <sven@gimp.org>
	* app/core/gimpgradient-load.c: load all linear gradients from an
	SVG file, not only the first one.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14160 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpgradient-load.c: load all linear gradients from an
+	SVG file, not only the first one.
+
 2004-07-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdatafactory.h: added "gboolean writable" to the
