--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-26  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/: added a de-allocation to the PPM's 
+	allocated by the size map dialog.
+	
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpgradient-load.c: load all linear gradients from an
