--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpcellrenderercolor.c
+	(gimp_cell_renderer_color_get_size): fine-tuning.
+
 2004-07-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/config/gimpconfig-types.h: removed GIMP_TYPE_COLOR.
