2004-07-26  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am (libgimpwidgetsinclude_HEADERS):
	added new files.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14168 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/Makefile.am (libgimpwidgetsinclude_HEADERS):
+	added new files.
+
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/Makefile.am
 	* app/widgets/gimpcellrenderertoggle.[ch]: moved to libgimpwidgets.
 
