2004-07-26  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added app/actions/plug-in-commands.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14169 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-26  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added app/actions/plug-in-commands.c.
+
 2004-07-24  Roman Joost <roman@bromeco.de>
 
 	* de.po: Updated few msgstrs and fixed typos
