2004-07-27  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpcolorhexentry.c (gimp_color_hex_entry_events):
	also accept the short hexadecimal notation (3 hex digits).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14170 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpcolorhexentry.c (gimp_color_hex_entry_events):
+	also accept the short hexadecimal notation (3 hex digits).
+
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/Makefile.am (libgimpwidgetsinclude_HEADERS):
