2004-07-27  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpfiledialog.c (gimp_file_dialog_add_filters):
	show extensions in the filters menu.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14173 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpfiledialog.c (gimp_file_dialog_add_filters):
+	show extensions in the filters menu.
+
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpbrushmenu.c
 	* libgimp/gimppatternmenu.c: attempt to make the brush and pattern
 	selectors look less like buttons (supposed to fix bug #147777).
