2004-07-27  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphelp.c (gimp_help): print the help-id and
	help-domain to stdout if gimp was started with the --verbose
	command-line option.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14174 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimphelp.c (gimp_help): print the help-id and
+	help-domain to stdout if gimp was started with the --verbose
+	command-line option.
+
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpfiledialog.c (gimp_file_dialog_add_filters):
-	show extensions in the filters menu.
+	show extensions in the filters menu. Is this a good idea at all?
 
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
