--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimphelp-ids.h removed unused help IDs
+	GIMP_HELP_FILE_OPEN_XCF and GIMP_HELP_FILE_SAVE_XCF. The help IDs
+	for these entries are generated from the procedure names.
+
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimphelp.c (gimp_help): print the help-id and
 	help-domain to stdout if gimp was started with the --verbose
 	command-line option.
