2004-07-27  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_uri): make
	sure we always set a non-null URI.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14176 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-27  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_uri): make
+	sure we always set a non-null URI.
+
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimphelp-ids.h removed unused help IDs
