--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-27  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/tmpl/gimppalettemenu.sgml
+	* libgimp/tmpl/gimppaletteselect.sgml
+	* libgimp/libgimp-docs.sgml
+	* libgimp/libgimp-sections.txt: added the palette select stuff.
+
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/libgimpcolor-sections.txt
