2004-07-27  Sven Neumann  <sven@gimp.org>
	* app/actions/image-commands.c: include "libgimpbase/gimpbase.h",
	not an individual header out of libgimpbase.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14183 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/image-commands.c: include "libgimpbase/gimpbase.h",
+	not an individual header out of libgimpbase.
+
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
 	* libgimpbase/Makefile.am
 	* libgimpbase/gimpbase.h
 	* libgimpbase/gimpbase.def
