2004-07-27  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added libgimpbase/gimpmemsize.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14184 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added libgimpbase/gimpmemsize.c.
+
 2004-07-15  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
