2004-07-27  Sven Neumann  <sven@gimp.org>
	* app/core/gimpgradient-load.c: don't leak empty SVG gradients.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14186 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpgradient-load.c: don't leak empty SVG gradients.
+
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
 	* app/actions/image-commands.c: include "libgimpbase/gimpbase.h",
 	not an individual header out of libgimpbase.
 
