2004-07-27  Sven Neumann  <sven@gimp.org>
	* menus/image-menu.xml.in: commented out "Context" menu now that
	we have a shortcut editor.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14187 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-27  Sven Neumann  <sven@gimp.org>
 
+	* menus/image-menu.xml.in: commented out "Context" menu now that
+	we have a shortcut editor.
+
+2004-07-27  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpgradient-load.c: don't leak empty SVG gradients.
 
 2004-07-27  Sven Neumann  <sven@gimp.org>
