2004-07-28  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpactiongroup.c
	(gimp_action_group_set_action_label): forgot to strip mnemonics
	here.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14189 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-28  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpactiongroup.c
+	(gimp_action_group_set_action_label): forgot to strip mnemonics
+	here.
+
+2004-07-28  Michael Natterer  <mitch@gimp.org>
+
 	Enabled disabling all menu mnemonics. Addresses bug #120034:
 
 	* app/config/gimpguiconfig.[ch]
