2004-07-28  Sven Neumann  <sven@gimp.org>
	* tools/gimp-mkenums: synced with glib-mkenums (execept for the
	newly added template feature).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14193 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-28  Sven Neumann  <sven@gimp.org>
+
+	* tools/gimp-mkenums: synced with glib-mkenums (execept for the
+	newly added template feature).
+
 2004-07-28  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/gimpbrushselect.c
