--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  DindinX  <david.odin@cpe.fr>
+
+	* plug-ins/common/spread.c: fix a smallish memory leak.
+
 2004-07-28  Sven Neumann  <sven@gimp.org>
 
 	* tools/gimp-mkenums: synced with glib-mkenums (execept for the
