2004-07-28  Michael Natterer  <mitch@gimp.org>
	* app/paint/gimpclone.c: converted tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14197 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/paint/gimpclone.c: converted tabs to spaces.
+
 2004-07-28  DindinX  <david.odin@cpe.fr>
 
 	* plug-ins/common/spread.c: fix a smallish memory leak.
