2004-07-28  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/image.pdb (image_is_dirty): fix typo in
	parameter description.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14201 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-28  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/image.pdb (image_is_dirty): fix typo in
+	parameter description.
+
+	* app/pdb/image_cmds.c
+	* libgimp/gimpimage_pdb.c: regenerated.
+
 2004-07-28  DindinX  <david.odin@cpe.fr>
 
 	*  plug-ins/common/unsharp.c: Added a toggle button to enable/disable
