--- a/plug-ins/twain/README
+++ b/plug-ins/twain/README
@@ -3,6 +3,10 @@ Copyright (C) 1999 Craig Setera
 Craig Setera <setera@home.com>
 03/31/1999
 
+Updated for Mac OS X support
+Brion Vibber <brion@pobox.com>
+07/22/2004
+
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
@@ -34,18 +38,16 @@ images:
  - Paletted images (both Gray and RGB)
 
 Prerequisites:
- This plug-in will not compile on anything other than a Win32
- platform.  Although the TWAIN documentation implies that there
- is TWAIN support available on Macintosh, I neither have a 
- Macintosh nor the interest in porting this.  If anyone else
- has an interest, consult www.twain.org for more information on
- interfacing to TWAIN.
+ Should compile and run on both Win32 and Mac OS X 10.3 (possibly
+ also on 10.2).
 
 Known problems:
 
  - Multiple image transfers will hang the plug-in.  The current
    configuration compiles with a maximum of single image transfers.
-
+ - On Mac OS X, canceling doesn't always close things out fully.
+ - Epson TWAIN driver on Mac OS X crashes the plugin when scanning.
+ 
 Debugging:
  There are two different versions of the program included, a standard
  version and a version built for debugging.  The debugging version is
