2004-07-28  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.c (gimp_display_shell_reconnect):
	emit "reconnect" *before* emitting scale and scroll events so
	listeners (the navigation view) can switch to the new image at the
	right time.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14203 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell.c (gimp_display_shell_reconnect):
+	emit "reconnect" *before* emitting scale and scroll events so
+	listeners (the navigation view) can switch to the new image at the
+	right time.
+
 2004-07-28  Sven Neumann  <sven@gimp.org>
 
 	Applied a patch from Brion Vibber that makes the TWAIN plug-in
