2004-07-28  Michael Natterer  <mitch@gimp.org>
	* app/gui/preferences-dialog.c (prefs_dialog_new): reordered
	buttons in the Interface -> Keyboard Shortcuts section to be
	consistent with other sections which provide configure/save/clear
	buttons.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14205 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-07-28  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/preferences-dialog.c (prefs_dialog_new): reordered
+	buttons in the Interface -> Keyboard Shortcuts section to be
+	consistent with other sections which provide configure/save/clear
+	buttons.
+
+2004-07-28  Michael Natterer  <mitch@gimp.org>
+
 	* app/tools/gimpbycolorselecttool.c (gimp_by_color_select_tool_init)
 	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_init):
 	don't call gimp_tool_control_set_preserve (tool->control, FALSE)
