--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-07-26  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
