--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-28  Shlomi Fish <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/presets.c: created a base function for
+	two functions with duplicate code.
+
 2004-07-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/imagemap/imap_default_dialog.c: no need to include
