2004-07-28  Sven Neumann  <sven@gimp.org>
	* autogen.sh: if the check for libtoolize fails, try glibtoolize.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14208 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  Sven Neumann  <sven@gimp.org>
+
+	* autogen.sh: if the check for libtoolize fails, try glibtoolize.
+
 2004-07-28  Shlomi Fish <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/presets.c: created a base function for
