2004-07-28  Michael Natterer  <mitch@gimp.org>
	* app/actions/actions.c (action_groups): register the
	GIMP_STOCK_VISIBLE icon with the "view" action group.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14210 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/actions.c (action_groups): register the
+	GIMP_STOCK_VISIBLE icon with the "view" action group.
+
 2004-07-28  Shlomi Fish <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/brush.c: removed a redundant parameter
