--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-29  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-scripts.c (script_fu_free_script):
+	applied patch by Kevin Cozens that moves a g_free() to the right
+	place (bug #148729).
+
 2004-07-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/actions.c (action_groups): register the
